[package]
name = "sinner-saint"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.29"
dotenvy = "0.15"
pretty_env_logger = "0.5.0"
teloxide = { version="0.17.0", default-features = false, features = ["rustls", "macros", "ctrlc_handler"] }
tokio = { version = "1.49.0", features = ["full"] }
wasmtime = { version = "41.0.3" , features = ["component-model", "async"]}
anyhow = "1.0"
wasi-common = "41.0.3"
wasmtime-wasi = { version = "41.0.3" }
fjall = "3.0.1"
serde_json = "1.0.149"
serde = "1.0.228"
